2006-06-02  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Bump to 1.0.2.

	* xev.c:
	Bug #6598: Run XFilterEvent() on all events, not just KeyPresses.
	(Samuel Thibault)

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.
